2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b33

 * Change: Changed all '    ' (4 spaces) to 1 tab.

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b32

 * Change: Added includes/comments/commentHandling.inc.php
	       Moved redundant functionality in it from:
		   - popups/add_comment.php
		   - view_photo.php

 * Change: Add-comment-check generates dedicated $comment_messages array.
		   Used in:
		   - lib/content.php
		   - popups/add_comment.php
		   - templates/photo.tpl.default

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b31

 * Fix/CHANGE: Made tempfolder for captcha relative to albumdir.
			   This makes it possible to use a full url.


 * Change: Disable maxtry parameter

2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b30

 * Change: If target is absolute, dont make it "more" absolute.

 * Change: Add message in configwizard when PHP does not support GD
		   and thus no captcha is available. 

 * Fix: Disable captcha if no config info is available.

2006-12-19 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b29

 * Fix: Removed duplicate require in:
	- setup/defaults.inc
	- setup/constants.inc

 * Change: Added gallerySanityCheck() into setup/index.php

2006-12-19 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b28

 * Removed: Param $userlanguage from initLanguage()

 * Change: Adjust call of initLanguage in init.php
	   When a user logs in, the language in the session var is updated.
	   This this param is not need and also just one call is needed.

 * Change: Moved position of set_time_limit in init.php,
	   as the check for existing config.php is now in gallerySanityCheck()

 * CHANGE: Load session code before language init.

2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b27

 * Change: Use of enableCaptcha() in:
	- lib/content.php
	- popups/add_comment.php
   
  Load captcha classes also only if captcha is enabled.

 * Change: Added check for captcha tempfolder.
